# mscthesis

./: .gitignore  README.md
code/closed-loop/: calculate_prefit_residuals.py  compare_ephemerides.py  luigi_prefit_residuals.py  plot_prefit_residuals.py  single_prefit_residuals.py
code/dynamical-model/: estimation_cartesian.py
code/propagation/: closest_approach.py  (+6 more)
doc/: ideas.md  notes.md
prefit/: pyproject.toml
proptools/: pyproject.toml
tastro/: pyproject.toml
tastro/src/tastro/: core.py
tastro/src/tastro/analysis/: __init__.py  accelerations.py  core.py  estimation_results.py  prefit.py  propagation_results.py  runner.py  utils.py
tastro/src/tastro/analysis/estimation/: cartesian_residuals.py  cli.py  doppler_residuals.py  prefit.py
tastro/src/tastro/analysis/misc/: cli.py  integrator_analysis.py
tastro/src/tastro/analysis/propagation/: __init__.py  cli.py  propagation_comparison.py  residual_ephemerides.py
tastro/src/tastro/analysis/runner/: cli.py  main.py  prefit.py
tastro/src/tastro/config/: __init__.py  core.py  general.py
tastro/src/tastro/config/environment/: __init__.py  general.py  planets.py  stations.py  vehicles.py
tastro/src/tastro/config/environment/planets/: __init__.py  atmosphere.py  ephemerides.py  gravity.py  radiation.py  rotation.py  shape.py
tastro/src/tastro/config/estimation/: __init__.py  interface.py
tastro/src/tastro/config/estimation/light_propagation/: __init__.py  convergence.py  corrections.py  interface.py
tastro/src/tastro/config/estimation/observation_models/: __init__.py  interface.py  links.py
tastro/src/tastro/config/estimation/observation_models/cartesian/: __init__.py  interface.py
tastro/src/tastro/config/estimation/observation_models/closed_loop/: __init__.py  ancillary.py  interface.py
tastro/src/tastro/config/estimation/observations/: __init__.py  cartesian.py  closed_loop.py  filters.py  interface.py
tastro/src/tastro/config/estimation/parameters/: __init__.py  parameters.py
tastro/src/tastro/config/propagation/: __init__.py  accelerations.py  general.py  integration.py
tastro/src/tastro/environment/: __init__.py  interface.py  planet.py  station.py  vehicle.py
tastro/src/tastro/environment/vehicle/: __init__.py  interface.py  macro.py
tastro/src/tastro/estimation/: __init__.py  cartesian.py  closed_loop.py  common.py  interface.py
tastro/src/tastro/io/: __init__.py  cli.py  estimation.py  propagation.py
tastro/src/tastro/io/command_line/: comparison.py  core.py  runner.py
tastro/src/tastro/io/observations/: __init__.py  cartesian.py  doppler.py  interface.py
tastro/src/tastro/propagation/: __init__.py  accelerations.py  core.py  interface.py
(+11 files in other folders)
