[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "tastro"
version = "0.1.0"
description = ""
authors = [
    { name = "Alfonso Sánchez Rodríguez", email = "a.sanchezrodriguez@student.tudelft.nl" }
]
requires-python = ">=3.11"
dependencies = [
]

[tool.setuptools.packages.find]
where = [
    "src"
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = false
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[project.scripts]
compare_propagations = "tastro.analysis.propagation.cli:compare_propagation_results_cli"
drsw_ephemerides = "tastro.analysis.propagation.cli:propagation_residual_wrt_ephemerides_rsw_cli"
dj2000_ephemerides = "tastro.analysis.propagation.cli:propagation_residual_wrt_ephemerides_j2000_cli"
tsimulator = "tastro.analysis.runner.cli:runner_cli"
tprefit = "tastro.analysis.runner.cli:calculate_prefit_residuals_cli"
doppler_prefits = "tastro.analysis.estimation.cli:show_doppler_prefit_residuals_cli"
cartesian_residuals = "tastro.analysis.estimation.cli:show_cartesian_residuals_cli"
doppler_residuals = "tastro.analysis.estimation.cli:show_doppler_residuals_cli"
fixed_integrator_analysis = "tastro.analysis.misc.cli:compare_fixed_step_integrators_cli"
